--- a/index.html
+++ b/index.html
@@ -155,6 +155,254 @@
 
     </header>
     <main>
+        <!-- deal  section -->
+        <section class="max-w-screen-xl mx-auto px-1 mt-4 md:mt-36 md:flex text-center md:justify-between gap-10">
+            <div>
+                <h2 class="text-2xl md:text-6xl text-center md:text-left font-bold md:mb-6">Deal of the day</h2>
+                <p class="mt-4 text-sm md:text-lg text-center md:text-left md:pr-20">Contrary to popular belief, is not
+                    simply random text. It has roots in a piece of classical
+                    Latin literature from 45 BC, making it over 2000 years old.</p>
+            </div>
+            <div class="w-60 px-5 md:w-auto md:p-0 mx-auto">
+                <div class="grid grid-flow-col gap-2 md:gap-5 text-center auto-cols-max mt-4">
+                    <div class="flex flex-col">
+                        <span class="countdown font-mono text-3xl md:text-5xl font-bold">
+                            <span style="--value:29;"></span>:
+                        </span>
+                        days
+                    </div>
+                    <div class="flex flex-col">
+                        <span class="countdown font-mono text-3xl md:text-5xl font-bold">
+                            <span style="--value:15;"></span>:
+                        </span>
+                        hours
+                    </div>
+                    <div class="flex flex-col">
+                        <span class="countdown font-mono text-3xl md:text-5xl font-bold">
+                            <span style="--value:25;"></span>:
+                        </span>
+                        min
+                    </div>
+                    <div class="flex flex-col">
+                        <span class="countdown font-mono text-3xl md:text-5xl font-bold">
+                            <span style="--value:08;"></span>
+                        </span>
+                        sec
+                    </div>
+                </div>
+            </div>
+        </section>
+         <!-- card section -->
+         <section class="max-w-screen-xl mx-auto
+         md:mt-12 px-1">
+             <div class="md:justify-between gap-6 md:flex">
+                 <!-- card-1 -->
+                 <div class="card w-full bg-base-100 border border-gray-200">
+                     <figure class="px-10 pt-10">
+                         <img src="images/fruit6.png" alt="Shoes" class="rounded-xl" />
+                     </figure>
+                     <div class="card-body items-center text-center">
+                         <h2 class="card-title text-2xl font-bold border-b-2 pb-4">12.90$ - 18.85$</h2>
+                         <hr>
+                         <p>Apples</p>
+                         <!-- ratings -->
+                         <div class="w-1/2 md:w-2/3 rating rating-lg rating-half">
+                             <input type="radio" name="rating-10" class="rating-hidden" />
+                             <input type="radio" name="rating-10" class="bg-red-500 mask mask-star-2 mask-half-1" />
+                             <input type="radio" name="rating-10" class="bg-red-500 mask mask-star-2 mask-half-2" />
+                             <input type="radio" name="rating-10" class="bg-red-500 mask mask-star-2 mask-half-1"
+                                 checked />
+                             <input type="radio" name="rating-10" class="bg-red-500 mask mask-star-2 mask-half-2" />
+                             <input type="radio" name="rating-10" class="bg-red-500 mask mask-star-2 mask-half-1" />
+                             <input type="radio" name="rating-10" class="bg-red-500 mask mask-star-2 mask-half-2" />
+                             <input type="radio" name="rating-10" class="bg-red-500-500 mask mask-star-2 mask-half-1" />
+                             <input type="radio" name="rating-10" class="bg-red-500-500 mask mask-star-2 mask-half-2" />
+                             <input type="radio" name="rating-10" class="bg-red-500-500 mask mask-star-2 mask-half-1" />
+                            <input type="radio" name="rating-10" class="bg-red-500 mask mask-star-2 mask-half-2" />
+                         </div>
+                         <div class="card-actions">
+                             <button class="text-red-600 text-lg font-bold">Details</button>
+                         </div>
+                     </div>
+                 </div>
+                 <!-- card-2 -->
+                 <div class="card w-full bg-base-100 border border-gray-200">
+                     <figure class="px-10 pt-10">
+                         <img src="images/fruit7.png" alt="Shoes" class="rounded-xl" />
+                     </figure>
+                     <div class="card-body items-center text-center">
+                         <h2 class="card-title text-2xl font-bold border-b-2 pb-4">12.90$ - 18.85$</h2>
+                         <hr>
+                         <p>Orange</p>
+                         <!-- ratings -->
+                         <div class="w-1/2 md:w-2/3 rating rating-lg rating-half">
+                            <input type="radio" name="rating-10" class="rating-hidden" />
+                            <input type="radio" name="rating-10" class="bg-red-500 mask mask-star-2 mask-half-1" />
+                            <input type="radio" name="rating-10" class="bg-red-500 mask mask-star-2 mask-half-2" />
+                            <input type="radio" name="rating-10" class="bg-red-500 mask mask-star-2 mask-half-1"
+                                checked />
+                            <input type="radio" name="rating-10" class="bg-red-500 mask mask-star-2 mask-half-2" />
+                            <input type="radio" name="rating-10" class="bg-red-500 mask mask-star-2 mask-half-1" />
+                            <input type="radio" name="rating-10" class="bg-red-500 mask mask-star-2 mask-half-2" />
+                            <input type="radio" name="rating-10" class="bg-red-500-500 mask mask-star-2 mask-half-1" />
+                            <input type="radio" name="rating-10" class="bg-red-500-500 mask mask-star-2 mask-half-2" />
+                            <input type="radio" name="rating-10" class="bg-red-500-500 mask mask-star-2 mask-half-1" />
+                           <input type="radio" name="rating-10" class="bg-red-500 mask mask-star-2 mask-half-2" />
+                        </div>
+                         <div class="card-actions">
+                             <button class="text-red-600 text-lg font-bold">Details</button>
+                         </div>
+                     </div>
+                 </div>
+                 <!-- card-3 -->
+                 <div class="card w-full bg-base-100 border border-gray-200">
+                     <figure class="px-10 pt-10">
+                         <img src="images/fruit8.png" alt="Shoes" class="rounded-xl" />
+                     </figure>
+                     <div class="card-body items-center text-center">
+                         <h2 class="card-title text-2xl font-bold border-b-2 pb-4">12.90$ - 18.85$</h2>
+                         <hr>
+                         <p>Red Dragon</p>
+                          <!-- ratings -->
+                          <div class="w-1/2 md:w-2/3 rating rating-lg rating-half">
+                            <input type="radio" name="rating-10" class="rating-hidden" />
+                            <input type="radio" name="rating-10" class="bg-red-500 mask mask-star-2 mask-half-1" />
+                            <input type="radio" name="rating-10" class="bg-red-500 mask mask-star-2 mask-half-2" />
+                            <input type="radio" name="rating-10" class="bg-red-500 mask mask-star-2 mask-half-1"
+                                checked />
+                            <input type="radio" name="rating-10" class="bg-red-500 mask mask-star-2 mask-half-2" />
+                            <input type="radio" name="rating-10" class="bg-red-500 mask mask-star-2 mask-half-1" />
+                            <input type="radio" name="rating-10" class="bg-red-500 mask mask-star-2 mask-half-2" />
+                            <input type="radio" name="rating-10" class="bg-red-500-500 mask mask-star-2 mask-half-1" />
+                            <input type="radio" name="rating-10" class="bg-red-500-500 mask mask-star-2 mask-half-2" />
+                            <input type="radio" name="rating-10" class="bg-red-500-500 mask mask-star-2 mask-half-1" />
+                           <input type="radio" name="rating-10" class="bg-red-500 mask mask-star-2 mask-half-2" />
+                        </div>
+                    </div>
+                </div>
+                <!-- card-4 -->
+                <div class="card w-full bg-base-100 border border-gray-200">
+                    <figure class="px-10 pt-10">
+                        <img src="images/fruit9.png" alt="Shoes" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                        <h2 class="card-title text-2xl font-bold border-b-2 pb-4">12.90$ - 18.85$</h2>
+                        <hr>
+                        <p>Banana</p>
+                        <!-- ratings -->
+                        <div class="w-1/2 md:w-2/3 rating rating-lg rating-half">
+                            <input type="radio" name="rating-10" class="rating-hidden" />
+                            <input type="radio" name="rating-10" class="bg-red-500 mask mask-star-2 mask-half-1" />
+                            <input type="radio" name="rating-10" class="bg-red-500 mask mask-star-2 mask-half-2" />
+                            <input type="radio" name="rating-10" class="bg-red-500 mask mask-star-2 mask-half-1"
+                                checked />
+                            <input type="radio" name="rating-10" class="bg-red-500 mask mask-star-2 mask-half-2" />
+                            <input type="radio" name="rating-10" class="bg-red-500 mask mask-star-2 mask-half-1" />
+                            <input type="radio" name="rating-10" class="bg-red-500 mask mask-star-2 mask-half-2" />
+                            <input type="radio" name="rating-10" class="bg-red-500-500 mask mask-star-2 mask-half-1" />
+                            <input type="radio" name="rating-10" class="bg-red-500-500 mask mask-star-2 mask-half-2" />
+                            <input type="radio" name="rating-10" class="bg-red-500-500 mask mask-star-2 mask-half-1" />
+                           <input type="radio" name="rating-10" class="bg-red-500 mask mask-star-2 mask-half-2" />
+                        </div>
+                        <div class="card-actions">
+                            <button class="text-red-600 text-lg font-bold">Details</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Button  -->
+            <div class="text-center items-center mt-12">
+                <button class="btn btn-primary  bg-red-600 border-transparent">Shop Now</button>
+            </div>
+        </section>
+        <section class="max-w-screen-xl mx-auto mt-10
+        md:mt-12 px-1">
+            <div class="hero md:min-h-[690px]"
+                style="background-image: url(./images/banner1.png);">
+                <div class="hero-overlay bg-opacity-60"></div>
+                <div class="hero-content text-center text-neutral-content">
+                    <div>
+                        <h1 class="mb-5 text-xl md:text-5xl font-bold">Meet the team section</h1>
+                        <p class="mt-6 text-sm md:text-base">Contrary to popular belief, is not simply random text. It has roots in a piece of classical <br> Latin literature from 45 BC, making it over 2000 years old.</p>
+                        <div class="md:flex justify-evenly gap-24 mt-12">
+                            <div>
+                                    <img class="mx-auto md:px-5 mb-5" src="./images/member1.png" alt="">
+                                    <h3 class="text-2xl font-bold">Awlad Hossain</h3>
+                                <p>Fruits Expert</p>
+                                <div class="flex justify-center gap-3 mt-3 mb-3">
+                                    <img src="images/icons/facebook.png" alt="">
+                                    <img src="images/icons/insta.png" alt="">
+                                    <img src="images/icons/twitter.png" alt="">
+                                </div>
+                            </div>
+                            <div>
+                                <img class="mx-auto md:px-5 mb-5" src="./images/member2.png" alt="">
+                                <h3 class="text-2xl font-bold">Safia Chowdhury</h3>
+                                <p>Fruits Expert</p>
+                                <div class="flex justify-center gap-3 mt-3 mb-3">
+                                    <img src="images/icons/facebook.png" alt="">
+                                    <img src="images/icons/insta.png" alt="">
+                                    <img src="images/icons/twitter.png" alt="">
+                                </div>
+                            </div>
+                            <div>
+                                <img class="mx-auto md:px-5 mb-5" src="./images/member3.png" alt="">
+                                <h3 class="text-2xl font-bold">Rokib Hossain</h3>
+                                <p>Fruits Expert</p>
+                                <div class="flex justify-center gap-3 mt-3 mb-3">
+                                    <img src="images/icons/facebook.png" alt="">
+                                    <img src="images/icons/insta.png" alt="">
+                                    <img src="images/icons/twitter.png" alt="">
+                                </div>
+                            </div>
+                            <div>
+                                <img class="mx-auto md:px-5 mb-5" src="images/member4.png" alt="">
+                                <h3 class="text-2xl font-bold">Chaity</h3>
+                                <p>Fruits Expert</p>
+                                <div class="flex justify-center gap-3 mt-3">
+                                    <img src="images/icons/facebook.png" alt="">
+                                    <img src="images/icons/insta.png" alt="">
+                                    <img src="images/icons/twitter.png" alt="">
+                                </div>
+                            </div>
+                        </div>
+                        
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        
+        <section class="max-w-screen-xl mx-auto  mt-5 md:mt-12 px-1">
+            <div class="text-center">
+                <h2 class="text-2xl md:text-5xl font-bold mb-5">Why Choose Us</h2>
+                <p class="text-gray-500 text-sm md:text-base">Contrary to popular belief, is not simply random text. It has roots in a piece of classical
+                    <br> Latin literature from 45 BC, making it over 2000 years old.</p>
+            </div>
+            <div class="md:flex gap-12 mt-12 items-center">
+                <div class="text-center md:text-start mb-5 md:mb-0">
+                    <h1 class="text-2xl mb-2 font-bold">Dedicated Team</h1>
+                    <p class="mb-4">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                    <h1 class="text-2xl mb-2 font-bold">Fresh is Best</h1>
+                    <p class="mb-4">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                    <h1 class="text-2xl mb-2 font-bold">Gift Certificates</h1>
+                    <p class="mb-4">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                </div>
+                <div class="mx-auto">
+                    <img src="./images/whychoose1.png" alt="">
+                </div>
+                <div class="text-center md:text-end mt-5 md:mt-0">
+                    <h2 class="text-2xl mb-2 font-bold">Integrated Supplier</h2>
+                    <p class="mb-4">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                    <h2 class="text-2xl mb-2 font-bold">Sustainable Practice</h2>
+                    <p class="mb-4">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                    <h2 class="text-2xl mb-2 font-bold">The Benefits Only</h2>
+                    <p class="mb-4">Professional employees are there for you to pick the most amazing and fresh fruits</p>
+                </div>
+            </div>
+        </section>
+    </main>
+
 
     </main>
     <footer>
