--- a/index.html
+++ b/index.html
@@ -385,18 +385,18 @@
                     <p class="mb-4">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
                     <h1 class="text-2xl mb-2 font-bold">Fresh is Best</h1>
                     <p class="mb-4">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
-                    <h1 class="text-2xl mb-2 font-bold">Gift Certificates</h1>
+                    <h1f class="text-2xl mb-2 font-bold">Gift Certificates</h1f>
                     <p class="mb-4">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
                 </div>
                 <div class="mx-auto">
                     <img src="./images/whychoose1.png" alt="">
                 </div>
                 <div class="text-center md:text-end mt-5 md:mt-0">
-                    <h2 class="text-2xl mb-2 font-bold">Integrated Supplier</h2>
+                    <h3 class="text-2xl mb-2 font-bold">Integrated Supplier</h3>
                     <p class="mb-4">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
-                    <h2 class="text-2xl mb-2 font-bold">Sustainable Practice</h2>
+                    <h3 class="text-2xl mb-2 font-bold">Sustainable Practice</h3>
                     <p class="mb-4">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
-                    <h2 class="text-2xl mb-2 font-bold">The Benefits Only</h2>
+                    <h3 class="text-2xl mb-2 font-bold">The Benefits Only</h3>
                     <p class="mb-4">Professional employees are there for you to pick the most amazing and fresh fruits</p>
                 </div>
             </div>
